RESOLVED FIXED57830
Web Inspector:Duplicated display of storage db when running Web SQL from an iframe
https://bugs.webkit.org/show_bug.cgi?id=57830
Summary Web Inspector:Duplicated display of storage db when running Web SQL from an i...
Ilya Tikhonovsky
Reported 2011-04-05 05:22:06 PDT
Created attachment 88204 [details] test1.html What steps will reproduce the problem? 1. Go to page with iframe and a database in it 2. See the Storage section in the dev tools 3. Every time the iframe is loaded the icon of the database is duplicated What is the expected output? Show one single instance of the database in the dev tools What do you see instead? A duplicate for every reload
Attachments
test1.html (1.99 KB, text/html)
2011-04-05 05:22 PDT, Ilya Tikhonovsky
no flags
parent.html (1.12 KB, text/html)
2011-04-05 05:22 PDT, Ilya Tikhonovsky
no flags
[patch] initial version (3.56 KB, patch)
2011-04-05 05:36 PDT, Ilya Tikhonovsky
no flags
Ilya Tikhonovsky
Comment 1 2011-04-05 05:22:33 PDT
Created attachment 88205 [details] parent.html
Ilya Tikhonovsky
Comment 2 2011-04-05 05:36:17 PDT
Created attachment 88206 [details] [patch] initial version
Pavel Feldman
Comment 3 2011-04-05 05:55:59 PDT
Comment on attachment 88206 [details] [patch] initial version View in context: https://bugs.webkit.org/attachment.cgi?id=88206&action=review > Source/WebCore/inspector/InspectorDatabaseAgent.cpp:224 > + resource->setDatabase(database); What is this needed for?
Ilya Tikhonovsky
Comment 4 2011-04-14 02:09:19 PDT
Comment on attachment 88206 [details] [patch] initial version This patch covers typical use cases. The page reopens Database and we have to update our internal ref to it because the old instance of DB usually has been closed.
Ilya Tikhonovsky
Comment 5 2011-04-14 05:32:29 PDT
Comment on attachment 88206 [details] [patch] initial version Clearing flags on attachment: 88206 Committed r83841: <http://trac.webkit.org/changeset/83841>
Ilya Tikhonovsky
Comment 6 2011-04-14 05:32:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.