2011-04-14  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector:Duplicated display of storage db when running Web SQL from an iframe.
        https://bugs.webkit.org/show_bug.cgi?id=57830

        There was created a new InspectorDatabaseResource entry for every didOpenDatabase event.
        Moreover there is new WebCore::Database for each didOpenDatabase event.
        I decided to change the old instance of the Database to a new one if they both use the same file.

        * inspector/InspectorDatabaseAgent.cpp:
        (WebCore::InspectorDatabaseAgent::didOpenDatabase):
        (WebCore::InspectorDatabaseAgent::findByFileName):
        * inspector/InspectorDatabaseAgent.h:
        * inspector/InspectorDatabaseResource.h:
        (WebCore::InspectorDatabaseResource::setDatabase):

Canonical link: https://commits.webkit.org/73598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83841 268f45cc-cd09-0410-ab3c-d52691b4dbfc